Fixed padding, spacing, renamed class

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,3 +1,8 @@
+.Home {
+    overflow: hidden;
+    width: 100%;
+}
+
 .home-section-1, .testimonials {
     display: grid;
     text-align: center;
@@ -11,7 +16,7 @@
 
 .home-section-1 {
     background-color: var(--hunter-green);
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 2fr 3fr;
 }
 
 .home-section-1 h3, .home-section-1 p {
@@ -26,7 +31,7 @@
 
 .home-section-1 p {
     font-size: 2em;
-    padding: 0 3.5em
+    padding: 0 3em;
 }
 
 .testimonials {
@@ -40,7 +45,6 @@
     background-color: var(--platinum);
     background-blend-mode: overlay;
     box-sizing: border-box;
-    padding: 3.5em;
 }
 
 .testimonials h3 {
